# todo-discord

./: .gitignore  README.md  pyproject.toml  todo.db
api/: db.py  migrate_db.py
api/cruds/: done.py  task.py
api/routers/: task.py
bot/: bot.py
src/: main.py  migrate_db.py
src/cruds/: done.py  task.py
src/models/: task.py
src/routers/: done.py  task.py  todo.py
src/schemas/: task.py
src/todo_discord/: __init__.py
