[project]
name = "todo-discord"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kissy24" }
]
dependencies = [
    "ruff>=0.2.2",
    "pytest>=8.0.1",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "fastapi>=0.109.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "todo_discord:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/todo_discord"]
