[project]
name = "todo-discord"
version = "0.1.0"
description = "t is a bot that registers and notifies todo on discord"
authors = [{ name = "kissy24" }]
dependencies = [
    "ruff>=0.2.2",
    "pytest>=8.0.1",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "discord>=2.3.2",
    "sqlalchemy>=2.0.27",
    "pydantic>=2.6.3",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/todo_discord"]

[tool.rye.scripts]
# These three options are equivalent:
devserver = "uvicorn main:app --reload"
